init: start postgres-typeorm-task

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 PORT=4000
 POSTGRESS_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=shlykova-db
 POSTGRES_DB=admin
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
+TYPEORM_ENTITIES=src/**/entities/*.entity.ts
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
