--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=4000
 POSTGRESS_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=shlykova-db
 POSTGRES_DB=admin
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
