--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
+    "docker:up": "docker-compose up --build",
     "docker:down": "docker-compose down",
     "docker:scan:app": "docker scan nodejs2022q2-service_shlykova-server",
     "docker:scan:db": "docker scan nodejs2022q2-service_shlykova-db",
